fix: enforce trip ownership for status and certification